k8s/istio/gateway.yaml
# Istio Ingress Gateway
# Single entry point for all external traffic
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nitte-gateway
  namespace: nitte
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
