k8s/istio/service-entries.yaml
# ServiceEntry: Allow outbound traffic to external services
# By default with STRICT mTLS, outbound traffic is blocked unless declared

# Allow SMTP (for notification service email)
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: smtp-external
  namespace: nitte
spec:
  hosts:
  - smtp.gmail.com
  ports:
  - number: 587
    name: smtp
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Allow Slack webhooks (for notification service)
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: slack-webhooks
  namespace: nitte
spec:
  hosts:
  - hooks.slack.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
# Allow Razorpay API (for payments)
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: razorpay-api
  namespace: nitte
spec:
  hosts:
  - api.razorpay.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
